<resources>
    <string name="app_name">Fun Quiz</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings used for QuizActivity -->
    <string name="answer1">N.1</string>
    <string name="answer2">N.2</string>
    <string name="answer3">N.3</string>
    <string name="answer4">N.4</string>

    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="next_button">Next</string>
    <string name="pause_button">Pause</string>
    <string name="ok_button">OK</string>
    <string name="score_label">Your score:</string>
    <string name="question_oceans">The Pacific Ocean is lager than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Res Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asias">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_test">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong</string>
    <string name="logged_in">Logged in</string>
    <string name="back_home">Turning back to menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ranking">rankingActivity</string>

</resources>
